--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -4,20 +4,20 @@
       <div class="item item-divider">
           Componentes
       </div>
-      <div class="list">
+      <div class="list list-components">
           <div class="item item-button-right" ng-repeat="component in components_server">
             <span><b>{{component.label}}</b> <span class="mac-components">({{component.device_mac}})</span>
               <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced"><i class="icon ion-power"></i></span>
               <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive"><i class="icon ion-power"></i></span>
             </span>
-            <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-positive">
+            <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-dark">
               <i class="icon ion-chevron-right"></i>
             </a>
           </div>
       </div>
     </div>
     <div ng-show="spinner == true" class="center-spinner">
-      <ion-spinner icon="android"></ion-spinner>
+      <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
     </div>
   </ion-content>
 </ion-view>
