--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -35,7 +35,7 @@
           </div>
           <div class="item item-text-wrap">
             <div ng-show="spinner == true" class="center-spinner">
-              <ion-spinner icon="android"></ion-spinner>
+              <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
             </div>
             <canvas ng-show="spinner == false" id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels" chart-series="line.series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas>
           </div>
