--- a/ionic-mobile/elektron/www/templates/waiting.html
+++ b/ionic-mobile/elektron/www/templates/waiting.html
@@ -16,7 +16,7 @@
 			<div class="app-logo"><img class="logo-img" src="img/elektron.png"></div>
 
       <div class="">
-        <ion-spinner icon="spiral"></ion-spinner>
+        <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
         <div>Ingresando</div>
       </div>
 
