--- a/ionic-mobile/elektron/www/templates/datatask.html
+++ b/ionic-mobile/elektron/www/templates/datatask.html
@@ -23,7 +23,7 @@
         </label>
         <label class="item item-input item-divider">
           <span class="input-label">Consumo establecido
-            <span ng-show="task.data_value !== undefined" class="badge badge-task badge-positive">{{task.data_value}}</span>
+            <span ng-show="task.data_value !== undefined" class="badge badge-task badge-dark">{{task.data_value}}</span>
           </span>
         </label>
         <div class="list">
@@ -72,10 +72,10 @@
         </label>
         <div class="item">
           <div class="button-bar">
-            <a ng-show="editButton == false" ng-click="addDataTask(task)" class="button button-positive icon ion-ios-bolt">
+            <a ng-show="editButton == false" ng-click="addDataTask(task)" class="button button-dark icon ion-ios-bolt">
               Agregar tarea
             </a>
-            <a ng-show="editButton == true" ng-click="editDataTask(task)" class="button button-positive icon ion-ios-bolt">
+            <a ng-show="editButton == true" ng-click="editDataTask(task)" class="button button-dark icon ion-ios-bolt">
               Editar tarea
             </a>
           </div>
