--- a/ionic-mobile/elektron/www/templates/logout.html
+++ b/ionic-mobile/elektron/www/templates/logout.html
@@ -7,7 +7,7 @@
 			<div class="app-logo"><img class="logo-img" src="img/elektron.png"></div>
       <div class="logout-spinner">
         <div class="logout-spinner-text">Saliendo</div>
-        <ion-spinner icon="android"></ion-spinner>
+        <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
       </div>
 	  </div>
   </div>
